force-app/main/default/objects/PDRI__VCS_Branch__c/PDRI__VCS_Branch__c.object-meta.xml
<CustomObject>
    <label>VCS Branch</label>
    <nameField>
        <displayFormat>VB-{0000000}</displayFormat>
        <label>VCS Branch Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCS Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>