force-app/main/default/objects/PDRI__VCS_Branch__c/fields/PDRI__Branch_Hash_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Branch_Hash_ID__c</fullName>
    <label>Branch Hash ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>