force-app/main/default/objects/PDRI__VCS_Branch__c/fields/PDRI__Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>