force-app/main/default/objects/PDRI__VCS_Branch__c/fields/PDRI__Managed_Instance_GUID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Managed_Instance_GUID__c</fullName>
    <label>Managed Instance GUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>