force-app/main/default/objects/PDRI__VCS_Branch__c/fields/PDRI__VCS_Repo__c.field-meta.xml
<CustomField>
    <fullName>PDRI__VCS_Repo__c</fullName>
    <label>VCS Repo</label>
    <referenceTo>PDRI__VCS_Repo__c</referenceTo>
    <relationshipLabel>VCS Branches</relationshipLabel>
    <relationshipName>VCS_Branches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>